@@ -19,6 +19,7 @@ import springfox.documentation.spring.web.plugins.Docket;
 
 @Configuration
 public class SwaggerConfig {
+
     private ApiKey apiKey() { 
         return new ApiKey("JWT", "Authorization", "header"); 
     }
@@ -31,15 +32,15 @@ public class SwaggerConfig {
         AuthorizationScope authorizationScope = new AuthorizationScope("global", "accessEverything"); 
         AuthorizationScope[] authorizationScopes = new AuthorizationScope[1]; 
         authorizationScopes[0] = authorizationScope; 
-        return Arrays.asList(new SecurityReference("JWT", authorizationScopes)); 
+        return List.of(new SecurityReference("JWT", authorizationScopes));
     }
 
     @Bean
     public Docket api() {
         return new Docket(DocumentationType.SWAGGER_2)
         .apiInfo(apiInfo())
-        .securityContexts(Arrays.asList(securityContext()))
-        .securitySchemes(Arrays.asList(apiKey()))
+        .securityContexts(Collections.singletonList(securityContext()))
+        .securitySchemes(List.of(apiKey()))
         .select()
         .apis(RequestHandlerSelectors.any())
         .paths(PathSelectors.any())
